--- a/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/template/plantilla.xhtml
+++ b/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/template/plantilla.xhtml
@@ -15,8 +15,8 @@
     </h:head>
     <h:body>
             <div id="mensaje">
-                <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
-                <p:growl id="growl" life="3000" />
+<!--                <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />-->
+                <p:growl id="growl" showDetail="true" autoUpdate="true" globalOnly="" life="3000" />
             </div>
             <div id="page">
                 <div id="header">
