--- a/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/resources/reportes/atencionesPorIngeniero.jrxml
+++ b/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/resources/reportes/atencionesPorIngeniero.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="AtencionesPorIngeniero" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="dd1b8bb5-dbc4-4d7e-97d7-bffe4b07935a">
 	<property name="ireport.zoom" value="1.5"/>
-	<property name="ireport.x" value="0"/>
+	<property name="ireport.x" value="34"/>
 	<property name="ireport.y" value="0"/>
 	<style name="columnas" forecolor="#FFFFFF" backcolor="#FFFFFF" fontSize="8">
 		<pen lineColor="#FFFFFF"/>
@@ -9,7 +9,7 @@
 	<style name="detalles" forecolor="#000000" backcolor="#000000" fontSize="8">
 		<pen lineColor="#FFFFFF"/>
 	</style>
-	<queryString language="SQL">
+	<queryString>
 		<![CDATA[SELECT
      Ticket.`ticketNumber` AS Ticket_ticketNumber,
      Ticket.`Usuario_id_propietario` AS Ticket_Usuario_id_propietario,
@@ -28,22 +28,22 @@
      UsuarioPropietario.`apellido` AS UsuarioP_apellido,
      UsuarioCreador.`nombre` AS UsuarioC_nombre,
      UsuarioCreador.`apellido` AS UsuarioC_apellido,
-     Cola.`nombre` AS Cola_nombre,
      EstadoTicket.`nombre` AS EstadoTicket_nombre,
      ItemProducto.`descripcion` AS ItemProducto_descripcion,
      PrioridadTicket.`nombre` AS PrioridadTicket_nombre,
      ServicioTicket.`nombre` AS ServicioTicket_nombre,
      ClienteEmpresa.`nombreComercial` AS ClienteEmpresa_nombreComercial,
-     ItemProducto.`Contrato_numero` AS ItemProducto_Contrato_numero
+     ItemProducto.`Contrato_numero` AS ItemProducto_Contrato_numero,
+     ColaTicket.`nombre` AS ColaTicket_nombre
 FROM
      `Ticket` Ticket INNER JOIN `EstadoTicket` EstadoTicket ON Ticket.`EstadoTicket_codigo` = EstadoTicket.`codigo`
      INNER JOIN `Usuario` UsuarioPropietario ON Ticket.`Usuario_id_propietario` = UsuarioPropietario.`id`
      INNER JOIN `Usuario` UsuarioCreador ON Ticket.`Usuario_id_creador` = UsuarioCreador.`id`
-     INNER JOIN `Cola` Cola ON Ticket.`Cola_id` = Cola.`id`
      INNER JOIN `ItemProducto` ItemProducto ON Ticket.`ItemProducto_numeroSerial` = ItemProducto.`numeroSerial`
      INNER JOIN `PrioridadTicket` PrioridadTicket ON Ticket.`PrioridadTicket_codigo` = PrioridadTicket.`codigo`
      INNER JOIN `ServicioTicket` ServicioTicket ON Ticket.`ServicioTicket_codigo` = ServicioTicket.`codigo`
-     INNER JOIN `ClienteEmpresa` ClienteEmpresa ON Ticket.`ClienteEmpresa_ruc` = ClienteEmpresa.`ruc`]]>
+     INNER JOIN `ClienteEmpresa` ClienteEmpresa ON Ticket.`ClienteEmpresa_ruc` = ClienteEmpresa.`ruc`
+     INNER JOIN `ColaTicket` ColaTicket ON Ticket.`ColaTicket_id` = ColaTicket.`id`]]>
 	</queryString>
 	<field name="Ticket_ticketNumber" class="java.lang.Integer"/>
 	<field name="Ticket_Usuario_id_propietario" class="java.lang.Integer"/>
@@ -62,13 +62,13 @@ FROM
 	<field name="UsuarioP_apellido" class="java.lang.String"/>
 	<field name="UsuarioC_nombre" class="java.lang.String"/>
 	<field name="UsuarioC_apellido" class="java.lang.String"/>
-	<field name="Cola_nombre" class="java.lang.String"/>
 	<field name="EstadoTicket_nombre" class="java.lang.String"/>
 	<field name="ItemProducto_descripcion" class="java.lang.String"/>
 	<field name="PrioridadTicket_nombre" class="java.lang.String"/>
 	<field name="ServicioTicket_nombre" class="java.lang.String"/>
 	<field name="ClienteEmpresa_nombreComercial" class="java.lang.String"/>
 	<field name="ItemProducto_Contrato_numero" class="java.lang.String"/>
+	<field name="ColaTicket_nombre" class="java.lang.String"/>
 	<group name="UsuarioP_nombre">
 		<groupExpression><![CDATA[$F{UsuarioP_nombre}]]></groupExpression>
 		<groupHeader>
@@ -222,7 +222,7 @@ FROM
 			</staticText>
 			<textField>
 				<reportElement style="detalles" x="32" y="55" width="100" height="11" uuid="8cdc023d-bd77-4052-9fd1-207f7a955335"/>
-				<textFieldExpression><![CDATA[$F{Cola_nombre}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{ColaTicket_nombre}]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement style="detalles" x="0" y="66" width="46" height="11" uuid="fe7bb049-3a67-4601-ba3d-55b0cd121874"/>
