--- a/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/resources/reportes/pagosPorVencerEnProx2Semanas.jrxml
+++ b/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/resources/reportes/pagosPorVencerEnProx2Semanas.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="PagosPorVencerProx2Semanas" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="af0eebb4-6d9b-4f14-8adb-f137ec7aa65b">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="3"/>
+	<property name="ireport.y" value="0"/>
 	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA["/Users/diegoflores/NetBeansProjects/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/resources/reportes/"]]></defaultValueExpression>
 	</parameter>
@@ -31,7 +31,7 @@ FROM
      INNER JOIN `ClienteEmpresa` ClienteEmpresa ON Contrato.`ClienteEmpresa_ruc` = ClienteEmpresa.`ruc`
      INNER JOIN `Usuario` Usuario ON Contrato.`accountManagerAsignado` = Usuario.`id`
 WHERE (SELECT COUNT(*) FROM
-     `Pago` Pago WHERE Pago.`Contrato_numero` = Contrato.`numero` AND TIMESTAMPDIFF(DAY, NOW(),`Pago`.`plazo`) < 15) >= 1]]>
+     `Pago` Pago WHERE Pago.`Contrato_numero` = Contrato.`numero` AND TIMESTAMPDIFF(DAY, NOW(),`Pago`.`plazo`) <= 15 AND TIMESTAMPDIFF(DAY, NOW(),`Pago`.`plazo`) >= 0) >= 1]]>
 	</queryString>
 	<field name="Contrato_numero" class="java.lang.String"/>
 	<field name="Contrato_fechaDeSuscripcion" class="java.sql.Timestamp"/>
@@ -127,11 +127,26 @@ WHERE (SELECT COUNT(*) FROM
 			</subreport>
 		</band>
 	</detail>
-	<columnFooter>
-		<band height="45" splitType="Stretch"/>
-	</columnFooter>
 	<pageFooter>
-		<band height="54" splitType="Stretch"/>
+		<band height="54" splitType="Stretch">
+			<textField>
+				<reportElement x="10" y="22" width="80" height="20" uuid="aef2bb8f-236f-4300-815c-66db797cf013"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression><![CDATA["Página "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
+			</textField>
+			<textField evaluationTime="Report">
+				<reportElement x="90" y="22" width="40" height="20" uuid="84d695bf-1836-4b0b-a190-ad08eac6ebfb"/>
+				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="229" y="22" width="100" height="20" uuid="87325f46-836a-41da-bba9-0006c07fed16"/>
+				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+			<textField pattern="MMMMM dd, yyyy">
+				<reportElement x="444" y="22" width="100" height="20" uuid="1156944b-8a29-4392-a218-d39af5acb181"/>
+				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
+			</textField>
+		</band>
 	</pageFooter>
 	<summary>
 		<band height="42" splitType="Stretch"/>
