--- a/trunk/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/resources/reportes/reportePorAbastecerConInfo.jrxml
+++ b/trunk/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/resources/reportes/reportePorAbastecerConInfo.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="PorAbastecer" pageWidth="842" pageHeight="595" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="0" uuid="66284476-54d3-4246-b83a-a45ceae7e2c6">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="PorAbastecer" pageWidth="842" pageHeight="595" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="0" whenResourceMissingType="Empty" uuid="66284476-54d3-4246-b83a-a45ceae7e2c6">
 	<property name="ireport.zoom" value="2.0"/>
-	<property name="ireport.x" value="53"/>
+	<property name="ireport.x" value="233"/>
 	<property name="ireport.y" value="0"/>
 	<style name="Title" fontName="Arial" fontSize="26" isBold="true" pdfFontName="Helvetica-Bold"/>
 	<style name="SubTitle" forecolor="#666666" fontName="Arial" fontSize="18"/>
@@ -136,8 +136,8 @@ HAVING
 				<reportElement style="Detail" x="46" y="0" width="151" height="15" uuid="d4b8a48c-b7ee-455b-adc0-c57969e38279"/>
 				<textFieldExpression><![CDATA[$F{ItemProducto_cantidad}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement style="Detail" x="204" y="0" width="235" height="15" uuid="dd4e4fc9-5fc1-459e-b46b-b27dbddfb69f"/>
+			<textField isStretchWithOverflow="true">
+				<reportElement style="Detail" x="204" y="0" width="159" height="15" uuid="dd4e4fc9-5fc1-459e-b46b-b27dbddfb69f"/>
 				<textFieldExpression><![CDATA[$F{ItemProducto_descripcion} != null ? $F{ItemProducto_descripcion} : "No disponible"]]></textFieldExpression>
 			</textField>
 			<textField>
