--- a/trunk/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/resources/reportes/cambiosRealizadosPorCliente.jrxml
+++ b/trunk/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/resources/reportes/cambiosRealizadosPorCliente.jrxml
@@ -9,6 +9,7 @@
 	<parameter name="SUBREPORT_DIR" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA["/Users/diegoflores/NetBeansProjects/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/resources/reportes/"]]></defaultValueExpression>
 	</parameter>
+	<parameter name="realPath" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[SELECT
      RegistroDeMovimientoDeInventario.`codigo` AS RegistroDeMovimientoDeInventario_codigo,
@@ -46,7 +47,7 @@ FROM
 					<textElement>
 						<font size="18"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Cliente: " + $F{ClienteEmpresa_nombreComercial}]]></textFieldExpression>
+					<textFieldExpression><![CDATA[$F{ClienteEmpresa_nombreComercial} != null ? "Cliente: " + $F{ClienteEmpresa_nombreComercial} : "Registro no disponible"]]></textFieldExpression>
 				</textField>
 			</band>
 		</groupHeader>
@@ -58,7 +59,7 @@ FROM
 		<band height="79" splitType="Stretch">
 			<image>
 				<reportElement x="0" y="0" width="218" height="38" uuid="4c1fffa4-fe5d-4511-8fb8-a5937b38d37b"/>
-				<imageExpression><![CDATA["/Users/diegoflores/NetBeansProjects/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/resources/reportes/sinetcomLogo.png"]]></imageExpression>
+				<imageExpression><![CDATA[$P{realPath} + "/sinetcomLogo.png"]]></imageExpression>
 			</image>
 			<staticText>
 				<reportElement x="1" y="48" width="554" height="31" uuid="3389ec8e-2d72-412a-9fdd-81e70ac68939"/>
